Fix headers, Untrack/Ignore public directory
Headers used to have a scrollbar for long words on narrow screens.
The fix lets them wrap on any letter.

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -67,9 +67,7 @@ h1, h2, h3, h4, h5, h6
   font-weight: 600
   margin-bottom: 0
   line-height: 1em
-  overflow-x: scroll
-  padding-top: .1em // prevent y overflow
-  padding-bottom: .1em // prevent y overflow
+  overflow-wrap: break-word
 
 h1
   font-size: 48pt
